feat:(dashboard) create full features add, edit, delete
