# src/controllers/juice.controller.js
@@ -1,86 +1,98 @@
-const juiceService = require('../services/juice.service');
-const { juiceSchema } = require('../validators/juice.validator');
-const ResponseUtil = require('../utils/response.util');
+const juiceService = require("../services/juice.service");
+const { juiceSchema } = require("../validators/juice.validator");
+const ResponseUtil = require("../utils/response.util");
+const { uploadImage } = require("../config/multer.config");
 
 class JuiceController {
-  async getAllJuices(req, res) {
-    try {
-      const juices = await juiceService.findAll();
-      return ResponseUtil.success(res, juices, 'Juices retrieved successfully');
-    } catch (error) {
-      return ResponseUtil.error(res, 'Error fetching juices');
+    async getAllJuices(req, res) {
+        try {
+            const juices = await juiceService.findAll();
+            const juicesWithStringImage = juices.map((juice) => {
+                juice.dataValues.stringImage = juice.dataValues.image;
+                return juice;
+            });
+            return ResponseUtil.success(res, juicesWithStringImage, "Juices retrieved successfully");
+        } catch (error) {
+            return ResponseUtil.error(res, "Error fetching juices");
+        }
     }
-  }
 
-  async getJuiceById(req, res) {
-    try {
-      const juice = await juiceService.findById(req.params.id);
-      if (!juice) {
-        return ResponseUtil.error(res, 'Juice not found', 404);
-      }
-      return ResponseUtil.success(res, juice, 'Juice retrieved successfully');
-    } catch (error) {
-      return ResponseUtil.error(res, 'Error fetching juice');
+    async getJuiceById(req, res) {
+        try {
+            const juice = await juiceService.findById(req.params.id);
+            if (!juice) {
+                return ResponseUtil.error(res, "Juice not found", 404);
+            }
+            return ResponseUtil.success(res, juice, "Juice retrieved successfully");
+        } catch (error) {
+            return ResponseUtil.error(res, "Error fetching juice");
+        }
     }
-  }
 
-  async createJuice(req, res) {
-    try {
-      const { error } = juiceSchema.validate(req.body);
-      if (error) {
-        return ResponseUtil.error(res, 'Validation error', 400, error.details);
-      }
+    async createJuice(req, res) {
+        try {
+            const resultImage = await uploadImage(req?.file);
+            const { error } = juiceSchema.validate(req.body);
+            if (error) {
+                return ResponseUtil.error(res, "Validation error", 400, error.details);
+            }
 
-      if (!req.file) {
-        return ResponseUtil.error(res, 'Image is required', 400);
-      }
+            if (!req.file) {
+                return ResponseUtil.error(res, "Image is required", 400);
+            }
 
-      const juiceData = {
-        ...req.body,
-        image: req.file.path
-      };
+            req.body.active = req.body.active === "1";
 
-      const newJuice = await juiceService.create(juiceData);
-      return ResponseUtil.success(res, newJuice, 'Juice created successfully', 201);
-    } catch (error) {
-      console.error(error.message);
-      return ResponseUtil.error(res, 'Error creating juice');
+            const juiceData = {
+                ...req.body,
+                image: resultImage.secure_url,
+            };
+
+            const newJuice = await juiceService.create(juiceData);
+            return ResponseUtil.success(res, newJuice, "Juice created successfully", 201);
+        } catch (error) {
+            console.error(error.message);
+            return ResponseUtil.error(res, "Error creating juice");
+        }
     }
-  }
 
-  async updateJuice(req, res) {
-    try {
-      const { error } = juiceSchema.validate(req.body);
-      if (error) {
-        return ResponseUtil.error(res, 'Validation error', 400, error.details);
-      }
+    async updateJuice(req, res) {
+        try {
+            let resultImage;
+            if (req?.file) {
+                resultImage = await uploadImage(req?.file);
+            }
+            const { error } = juiceSchema.validate(req.body);
+            if (error) {
+                return ResponseUtil.error(res, "Validation error", 400, error.details);
+            }
 
-      const juiceData = {
-        ...req.body,
-        ...(req.file && { image: req.file.path })
-      };
+            const juiceData = {
+                ...req.body,
+                ...(req.file && resultImage && { image: resultImage.secure_url }),
+            };
 
-      const updatedJuice = await juiceService.update(req.params.id, juiceData);
-      if (!updatedJuice) {
-        return ResponseUtil.error(res, 'Juice not found', 404);
-      }
-      return ResponseUtil.success(res, updatedJuice, 'Juice updated successfully');
-    } catch (error) {
-      return ResponseUtil.error(res, 'Error updating juice');
+            const updatedJuice = await juiceService.update(req.params.id, juiceData);
+            if (!updatedJuice) {
+                return ResponseUtil.error(res, "Juice not found", 404);
+            }
+            return ResponseUtil.success(res, updatedJuice, "Juice updated successfully");
+        } catch (error) {
+            return ResponseUtil.error(res, "Error updating juice");
+        }
     }
-  }
 
-  async deleteJuice(req, res) {
-    try {
-      const deleted = await juiceService.delete(req.params.id);
-      if (!deleted) {
-        return ResponseUtil.error(res, 'Juice not found', 404);
-      }
-      return ResponseUtil.success(res, null, 'Juice deleted successfully', 204);
-    } catch (error) {
-      return ResponseUtil.error(res, 'Error deleting juice');
+    async deleteJuice(req, res) {
+        try {
+            const deleted = await juiceService.delete(req.params.id);
+            if (!deleted) {
+                return ResponseUtil.error(res, "Juice not found", 404);
+            }
+            return ResponseUtil.success(res, null, "Juice deleted successfully", 204);
+        } catch (error) {
+            return ResponseUtil.error(res, "Error deleting juice");
+        }
     }
-  }
 }
 
 module.exports = new JuiceController();
